# sample-fastapi-app

./: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: ci-build-push.yml  ci.yml  hello.yml  terraform.yml
app/: main.py
app/config/: logging.py  settings.py
app/middleware/: correlation.py
app/routers/: health.py
tests/: test_main.py
