[tool.poetry]
name = "sample-fastapi-app"
version = "0.1.0"
description = "Sample FastAPI app for Docker CI/CD"
authors = ["Sudheer"]

[tool.poetry.dependencies]
python = "^3.10"

fastapi = "*"
uvicorn = "*"

prometheus-fastapi-instrumentator = "*"
prometheus-client = "*"
python-json-logger = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
flake8 = "*"

[tool.pytest.ini_options]
pythonpath = ["."]
